@@ -5,6 +5,8 @@ Amarok ChangeLog
 
 VERSION 2.4.2-Beta 1
   FEATURES:
+    * Make podcast episodes download filename configurable. Patch by
+      Sandeep Raghuraman. (BR 155075)
     * Automatic scrolling in lyrics applet (Thanks to Jan Gerrit Marker)
     * Option to scrobble composer as artist to Last.fm (Thanks to Nicholas Wilson)
 
